Fix breakpoint too large for grid system

--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -39,13 +39,11 @@ body {
 .footer-logos-container {
   display: grid;
 
-  // For small (xs and sm) devices: 1 per lines
-  @media only screen and (min-width: $breakpoint-xs) {
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(4, 1fr);
-  }
-  // For medium (md) devices: 2 per lines
-  @media only screen and (min-width: $breakpoint-md) {
+  // For small (xs) devices: 1 per lines
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(4, 1fr);
+  // For small (sm) devices: 2 per lines
+  @media only screen and (min-width: $breakpoint-sm) {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
   }
